--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -6,5 +6,19 @@
   position: relative;
   background-color: white;
   border: 2px solid blue;
-  margin: 0 auto;
+  margin: -10 auto;
+}
+
+#leftBorder, #rightBorder {
+	position: fixed;
+	background-color: orangered;
+	z-index: 1000;
+}
+
+#leftBorder {
+	left: 0;
+}
+
+#rightBorder {
+	right: 0;
 }
