--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -10,6 +10,22 @@
   margin: -10 auto;
 }
 
+#chatBox {
+	position: fixed;
+	top: 80%;
+	width: 100%;
+	text-align: center;
+	z-index: 2000;
+	margin-left: -8px;
+
+	pointer-events: none;
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* Internet Explorer */
+	-khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
+	-webkit-user-select: none; /* Chrome, Safari, and Opera */
+	-webkit-touch-callout: none;
+}
+
 #leftBorder, #rightBorder {
 	position: fixed;
 	background-color: orangered;
